tests/snapshots/integration__shell__unfinished_pipe.snap
---
source: tests/shell.rs
expression: stderr
---
Error: unfinished pipeline
   ╭─[unfinished_pipe.tmp:1:9]
   │
 1 │ echo hi |
   │         ┬  
   │         ╰── error happened here
───╯
Error: error parsing input

